--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+apscheduler==3.11.0
 docx==0.2.4
-Flask==3.1.0
+Flask==2.2.5
 numpy==1.24.4
-openai==1.59.3
+numpy==1.17.4
+openai==1.59.6
 python-dotenv==1.0.1
-python_docx==1.1.2
